package com.mservice.momo.msg;
enum MsgType{

    ERR                     = 5000;

    /*GET_AGENT_INFO          = 5001;*/
    GET_AGENT_INFO_REPLY    = 5002;

    SEND_SMS                = 5003;
    SEND_SMS_REPLY          = 5004;

    REGISTER                 = 5005;
    REGISTER_REPLY           = 5006;

    LOG_IN                  = 5007;
    LOG_IN_REPLY            = 5008;

    GET_BILL_INFO           = 5009;
    BANK_OUT                = 5011;
    BANK_IN                 = 5012;
    M2C_TRANSFER            = 5013;
    M2M_TRANSFER            = 5014;
    TOP_UP                  = 5015;
    TOP_UP_REPLY            = 5016;
    CHANGE_PIN              = 5017;
    TEST                    = 5018;
    RECOVERY_NEW_PIN        = 5019;
    PAY_ONE_BILL            =5020;
    PAY_MULTI_BILLS                     = 5021;
    VIEW_PAYMENT_HISTORY_BY_BILL_ID     = 5022;
    TOPUP_GAME                          = 5023;

    QUICK_DEPOSIT = 5024;
    QUICK_PAYMENT = 5025;

    BANK_NET_TO_MOMO = 5026;
    BANK_NET_VERIFY_OTP = 5027;
    BANK_NET_ADJUSTMENT = 5028;

    PAY_ONE_BILL_OTHER = 5029;

    TRANSFER_MONEY_TO_PLACE = 5030;

    //for app sms
    BILL_PAY_TELEPHONE = 5031; // THANH TOAN CUOC DIEN THOAI
    BILL_PAY_TICKET_AIRLINE=5032; // THANH TOAN VE MAY BAY
    BILL_PAY_TICKET_TRAIN=5033; // THANH TOAN VE TAU LUA
    BILL_PAY_INSURANCE=5034; // THANH TOAN TIEN BAO HIEM
    BILL_PAY_INTERNET=5035; // THANH TOAN CUOC INTERNET
    BILL_PAY_OTHER=5036; // THANH TOAN CAC LOAI HOA DON KHAC

    DEPOSIT_CASH_OTHER  = 5037; // NAP TIEN KHAC
    BUY_MOBILITY_CARD   = 5038; // MUA THE CAO
    BUY_GAME_CARD       = 5039; // MUA THE GAME
    BUY_OTHER           = 5040; // MUA KHAC
    AGENT_INFO_MODIFY        = 5041;

    MUA_123_ADJUSTMENT = 5042;

    REGISTER_INACTIVE_AGENT = 5043;

    CHECK_USER_STATUS = 5044;

    BANK_NET_CONFIRM = 5045;

    MAP_AGENT_TO_ZALO_GROUP = 5046;

    TRA_THUONG_ZALO = 5047;

    GET_AGENT_INFO = 5048;

    GET_BILL_INFO_BY_SERVICE=5049;

    ADJUSTMENT = 5050;

    TOP_UP_STR = 5051;

    MODIFY_AGENT_EXTRA = 5052;

    MAP_AGENT_TO_VISA_GROUP = 5053;

    MAP_AGENT_TO_DGD_GROUP = 5054;

    M2MERCHANT_TRANSFER = 5055;

    SET_AGENT_NAMED = 5056;
}

message ZaloGroup{
    optional string zalo_group = 1; // nha mang
    optional string zalo_capset_id = 2;
    optional string zalo_upper_limit = 3;
}

message keyValuePair {
    optional string key = 1;  // key
    optional string value = 2; // value
}

message commonAdjust{
    optional string source = 1;
    optional string target = 2;
    optional uint64 amount = 3;
    optional uint32 walletType = 4; // default = 1
    optional string description = 5;
    optional uint64 time = 6;
    optional string phoneNumber = 7;
    repeated keyValuePair extra_map = 8;
}

message BankNetConfirm{
    optional string merchant_trans_id = 1; // nha mang
    optional string trans_id = 2; // menh gia
    optional uint32 adjustResult = 3;
    repeated keyValuePair extra_map = 4;
}

message RegisterInactiveAgent{
    /*String phone = "";
    String name = "";
    String birthday = "";
    String address = "";
    String personalId = "";
    String contact = "";
    String email = "";*/
    optional string phone = 1;
    optional string name = 2;
    optional string birthday = 3;
    optional string address = 4;
    optional string persionalId = 5;
    optional string contact = 6;
    optional string email = 7;
    optional string channel = 8;
    optional string arr_capset  = 9;
    optional string upper_limit = 10;

}

//app sms.start
message BuyOther{
    optional string providerId = 1; // nha mang
    optional string amount = 2; // menh gia
    optional string pin = 3;
}
message BuyGameCard{
    optional string providerId = 1; // nha mang
    optional string amount = 2; // menh gia
    optional string pin = 3;
}
message BuyMobilityCard{
    optional string providerId = 1; // nha mang
    optional string amount = 2; // menh gia
    optional string pin = 3;
}

message AgentInfoModify{
    optional string name = 1;
    optional string card_id = 2;
    optional string address = 3;
    optional string email = 4;
    optional string dob = 5;
    repeated keyValuePair kvps = 6;
}

message DepositCashOther {
    optional string providerId = 1;
    optional string customerAcc = 2;
    optional string pin = 3;
    optional uint64 amount = 4;
    optional string channel = 5;
}

message BillPayTelephone {
    optional string providerId = 1;
    optional string phone = 2;
    optional string areaId = 3;
    optional string pin = 4;
    optional uint64 amount = 5;
    optional string channel = 6;
}

message BillPayTicketAirline {
    optional string providerId = 1;
    optional string ticketId = 2;
    optional string pin = 3;
    optional uint64 amount = 4;
    optional string channel = 5;
}

message BillPayTicketTrain {
    optional string placeId = 1;
    optional string ticketId = 2;
    optional string pin = 3;
    optional uint64 amount = 4;
    optional string providerId = 5;
    optional string channel = 6;
}

message BillPayInsurance {
    optional string providerId = 1;
    optional string insuranceAcc = 2;
    optional string pin = 3;
    optional uint64 amount = 4;
    optional string channel=5;
}

message BillPayInternet {
    optional string providerId = 1;
    optional string customerAcc = 2;
    optional string areaId = 3;
    optional string pin = 4;
    optional uint64 amount = 5;
    optional string channel = 6;
}

message BillPayOther {
    optional string providerId = 1;
    optional string billerId = 2;
    optional string areaId = 3;
    optional string pin = 4;
    optional uint64 amount = 5;
    optional string channel = 6;
}
//app sms.end

message Err{
    enum ResultCode {
        MSG_FORMAT_NOT_CORRECT = 1;
        NUMBER_NOT_VALID       = 2;
    };

    optional uint32 rcode = 1; //if
    optional string rdesc = 2;
}

//for internal only
message SendSms{
    optional uint32 sms_id  = 1;
    optional uint32 to_number  = 2;
    optional string content = 3;
}

message SendSmsReply{
    optional uint32 sms_id  = 1;
    optional uint32 rcode   = 2;
    optional string rdesc   = 3;
}

message RegStatus {
    optional bool is_setup      = 1;      //dang ky
    optional bool is_reged      = 2;      //dang ky
    optional bool is_active     = 3;      //kich hoat
    optional bool is_named      = 4;      //dinh danh
    optional bool is_frozen     = 5;
    optional bool is_suppend    = 6;
    optional bool is_stopped    = 7;
}

message GetAgentInfoReply {

    enum ResultCode {
        SYSTEM_ERROR				= -1;
        ALL_OK						= 0;
        PHONE_NUMBER_NOT_CORRECT	= 2;
        AGENT_NOT_FOUND				= 11;
    }

    optional bool result             = 1;
    optional string name             = 2;
    optional string card_id          = 3;
    optional double momo             = 4; // long
    optional double mload            = 5;// long
    optional string email            = 6;
    optional RegStatus regStatus     = 7;

    //append more info
    optional uint64 point = 8;
    optional string dateOfBirth = 9;
    optional string address = 10;
    optional uint32 rcode = 11;

    optional string bank_name = 12;
    optional string bank_acc = 13;
    optional string bank_code = 14;
    optional uint64 agent_id  = 15;
    optional uint64 createdDate = 16;
}

message Register{
    optional string name        = 1;
    optional string id_card     = 2;
    optional string pin         = 3;
    optional string arr_group   = 4;
    optional string arr_capset  = 5;
    optional string upper_limit = 6;
    optional string email = 7;
    optional string question = 8;
    optional string answer = 9;
    optional string channel = 10;
    optional string dateOfBirth = 11;
    optional string address = 12;
    repeated keyValuePair kvps = 13; // chu danh sach cac key can khai bao khi tao moi client
}

message LogIn{
    optional uint32 number  = 1;
    optional string mpin    = 2;
}

message GetBillInfo{
    optional string mpin        = 1;
    optional string provider_id = 2;
    optional string bill_id     = 3;
}

message AgentInfo{
    optional string number = 1;
}

message BankOut{
    optional string mpin          = 1;
    optional uint64 amount        = 2;
    optional string bank_code     = 3;
    optional string channel       = 4;
    repeated keyValuePair kvps    = 5;
}

message TopUp{
    optional uint32 from_number = 1;
    optional string mpin = 2;
    optional uint32 to_number = 3;
    optional uint64 amount = 4;
    optional string channel = 5;
    repeated keyValuePair keyValuePairs = 6;
}

message TopUpString{
    optional string from_number = 1;
    optional string mpin = 2;
    optional string to_number = 3;
    optional uint64 amount = 4;
    optional string channel = 5;
    repeated keyValuePair keyValuePairs = 6;
}

message TopUpReply{
    optional bool result = 1;
    optional uint32 rcode  = 2;
    optional string trans_id = 3;
}

message BankIn{
    optional string mpin         = 1;
    optional uint64 amount       = 2;
    optional string bank_code    = 3;
    optional string channel      = 4;
    repeated keyValuePair kvps   = 5;

}

// String agentReference, String mpin, String phoneNumber, String name, String cmnd, long amount, String notice
message M2CTransfer{
    optional string agent   = 1;
    optional string mpin    = 2;
    optional string phone   = 3;
    optional string name    = 4;
    optional string card_id = 5;
    optional uint64 amount  = 6;
    optional string notice  = 7;
    optional string channel  = 8;
    repeated keyValuePair kvps   = 9;
}

message PayOneBillOther{
    optional string agent   = 1;
    optional string mpin    = 2;
    optional string phone   = 3;
    optional string name    = 4;
    optional string card_id = 5;
    optional uint64 amount  = 6;
    optional string notice  = 7;
    optional string channel  = 8;
    repeated keyValuePair kvps   = 9;
}

message M2MTransfer{
    optional string agent   = 1;
    optional string mpin    = 2;
    optional string phone   = 3;
    optional uint64 amount  = 4;
    optional string notice  = 5;
    optional string channel  = 6;
    repeated keyValuePair kvps = 7;
}

message TransferMoney2Place{
    optional string agent   = 1;
    optional string mpin    = 2;
    optional string phone   = 3;
    optional uint64 amount  = 4;
    optional string notice  = 5;
    optional string channel  = 6;
    repeated keyValuePair kvps   = 7;
}

message ChangePin{
    optional string number   = 1;
    optional string old_pin    = 2;
    optional string new_pin   = 3;
}

message RecoveryNewPin{
    optional string number   = 1;
    optional string old_pin = 2;
    optional string new_pin   = 3;
}


message PayOneBill{
    optional string pin   = 1;
    optional string providerId = 2;
    optional string billId   = 3;
    optional uint64 amount   = 4;
    optional string channel   = 5;
    repeated keyValuePair keyValuePairs = 6;

}

message PayMultiBills{
    optional string pin   = 1;
    optional string providerIds = 2;
    optional string billIds   = 3;
    optional string amounts   = 4;
}

message ViewPaymentHistoryByBillId{
    optional string pin      = 1;
    optional string billId   = 2;
}

message TopUpGame{
    optional string mpin            = 1;
    optional string providerId      = 2;
    optional uint64 amount          = 3;
    optional string game_account    = 4;
    optional string channel    = 5;
    repeated keyValuePair keyValuePairs = 6;

}

message CheckPhoneDetail{
    optional string number = 1;
}

message GetStoreAround{
    optional double lng = 1;
    optional double lat = 2;
    optional string street = 3;
    optional string ward = 4;
    optional string district = 5;
    optional string city = 6;
    optional string area = 7;
    optional uint32 limit = 8;
}
message QuickDeposit{

    optional string providerId = 1;
    optional string tellerId = 2;
    optional string billId = 3;
    optional uint64 amount = 4;
    optional string pin = 5;
    optional string channel = 6;
}

message QuickPayment{
    optional string providerId = 1;
    optional string tellerId = 2;
    optional string billId = 3;
    optional uint64 amount = 4;
    optional string pin = 5;
    optional string channel =6;
}

/*String phonenumber, String amount, String bankID,
String card_holder_name, String card_holder_number,
String card_holder_month, String card_holder_year*/

message BankNetToMomo{
    optional uint64 amount =1;
    optional string bankId =2;
    optional string card_holder_name =3;
    optional string card_holder_number =4;
    optional string card_holder_month =5;
    optional string card_holder_year =6;
}

message BankNetVerifyOtp{
    optional string merchant_trans_id =1;
    optional string trans_id = 2;
    optional uint64 amount = 3;
    optional string otp = 4;
    repeated keyValuePair kvps   = 5;
}

message Broadcast{
    enum MsgType {
        NOTICE      = 1;
        ADVERTISE   = 2;
        NEW_USER    = 3;
        MONEY_REQ   = 4;
        KILL_PREV   = 5;
        MONEY_RECV  = 6;
        TRANS_OUSIDE= 7;
        NOTIFICATION= 8;
        CHECK_PREV  = 9;
        PREV_RETURN = 10;
        FORCE_UPDATE_AGENT_INFO=11;
        GET_TOKEN = 12;

        //todo put more here
    }
    optional MsgType  type    = 1;
    optional string sender      = 2;
    optional string content     = 3;

}